RESOLVED FIXED53261
REGRESSION (r73307): wowtal.com broken in ToT
https://bugs.webkit.org/show_bug.cgi?id=53261
Summary REGRESSION (r73307): wowtal.com broken in ToT
Jon
Reported 2011-01-27 14:58:26 PST
The WoW talent calculator at wowtal.com is completely broken in WebKit ToT and nightly r76727. None of the content in the class bar renders. Page renders correctly in Safari 5.0.3.
Attachments
Patch refactoring default parentheses backtracks destination generation (13.99 KB, patch)
2011-02-02 14:49 PST, Michael Saboff
barraclough: review+
Alexey Proskuryakov
Comment 1 2011-01-28 15:02:21 PST
Andy Estes
Comment 2 2011-01-31 16:57:49 PST
Michael Saboff
Comment 3 2011-02-01 15:54:58 PST
This appears to be a regression caused by http://trac.webkit.org/changeset/76502 from https://bugs.webkit.org/show_bug.cgi?id=51395. I am investigating to see what changes can be made to fix the problem.
Michael Saboff
Comment 4 2011-02-02 14:49:56 PST
Created attachment 80974 [details] Patch refactoring default parentheses backtracks destination generation
Michael Saboff
Comment 5 2011-02-02 17:18:44 PST
Note You need to log in before you can comment on or make changes to this bug.